--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # act like GNU screen
 unbind C-b
-set -g prefix C-a
+set -g prefix C-s
 #
 # 256 colors for vim
-set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color-bce"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -41,4 +41,6 @@ bind C-l send-keys 'C-l'
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to clipboard!"
