changed tmux, now you can ssh -X and when ctrl-s [ opying end with y and its in your x clipboard!!!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 set -g prefix C-s
 #
 # 256 colors for vim
-set -g default-terminal "screen-256color-bce"
+set -g default-terminal "screen-256color"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -41,6 +41,4 @@ bind C-l send-keys 'C-l'
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to clipboard!"
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
